--- a/src/assets/scss/_education.scss
+++ b/src/assets/scss/_education.scss
@@ -35,6 +35,7 @@
   }
 
   .v-stepper {
+    z-index: -1;
     position: relative;
     /*   visibility: visible; */
   }
@@ -44,6 +45,7 @@
     left: 9px;
     height: 100%;
     position: absolute;
+    z-index: -1;
   }
 
   .step.completed .circle {
