--- a/src/assets/scss/_navbar.scss
+++ b/src/assets/scss/_navbar.scss
@@ -1,10 +1,11 @@
 nav {
   width: 100%;
-  padding: 1.7rem 0;
+  padding: 1rem 0;
   position: sticky;
   top: 0;
   left: 0;
   background-color: #fff;
+  z-index: 11;
 
   .container {
     width: 70%;
@@ -23,10 +24,6 @@ nav {
         text-decoration: none;
         font-family: $font-raleway;
         transition: all 0.4s;
-
-        &.active {
-          color: #000;
-        }
 
         &:hover {
           color: #000;
@@ -50,14 +47,23 @@ nav {
         top: -100%;
         left: 0%;
         right: 0;
-        background-color: #fff;
+        background-color: $primary-color;
+        z-index: 3;
         transition: all 0.4s;
 
         &.visible {
           padding: 6rem 0;
           position: absolute;
           top: 0%;
-          height: 80vh;
+          height: 100vh;
+        }
+
+        a {
+          color: #fff;
+
+          &:hover {
+            color: #fff;
+          }
         }
       }
     }
@@ -66,7 +72,7 @@ nav {
 
 .nav__menuToggler {
   position: relative;
-  z-index: 10;
+  z-index: 20;
   display: none;
   width: 35px;
   height: 35px;
@@ -79,7 +85,7 @@ nav {
   div {
     width: 100%;
     height: 3px;
-    background-color: #333;
+    background-color: $primary-color;
     margin: 6px 0;
     transition: 0.4s;
   }
@@ -88,11 +94,13 @@ nav {
 
   &.cross {
     div:nth-child(1) {
+      background: #fff;
       -webkit-transform: rotate(-45deg) translate(-5px, 5px);
       transform: rotate(-45deg) translate(-5px, 5px);
     }
 
     div:nth-child(2) {
+      background: #fff;
       -webkit-transform: rotate(45deg) translate(0px, -3px);
       transform: rotate(45deg) translate(0, -3px);
     }
