--- a/src/assets/scss/_projects.scss
+++ b/src/assets/scss/_projects.scss
@@ -1,5 +1,4 @@
 .projects {
-  height: 100vh;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -34,6 +33,7 @@
     // Project sample image
     img {
       width: 100%;
+      position: relative;
     }
 
     // Project details on hover
@@ -54,7 +54,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      z-index: 10;
+      z-index: 1;
       transition: all 0.4s;
     }
 
